[package]
name = "fiftyone-pipeline-engines"
version = "4.5.1"
description = "AspectEngine/AspectData, AspectPropertyValue, missing-property and data-update services, and cache wiring for the 51Degrees pipeline."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
fiftyone-pipeline-core = { version = "4.5.1", path = "../pipeline-core" }
fiftyone-caching = { version = "4.5.1", path = "../caching" }
thiserror.workspace = true
# Date and time handling for data-file publish/expiry timestamps and the
# If-Modified-Since header. `default-features = false` with `clock` keeps the
# dependency lean while still giving the local-clock access the service needs.
chrono.workspace = true
# The data-update service's transport and helpers, all optional and gated behind
# the `data-update` feature so a cloud-only or wasm consumer can drop them (none
# of these build for targets such as wasm32-wasip1).
#
# Blocking HTTP client for the remote data-update poll. rustls avoids a system
# OpenSSL dependency on Windows. The blocking client is used because the update
# service runs on its own background thread and does not need an async runtime.
reqwest = { version = "0.13", default-features = false, features = ["blocking", "rustls"], optional = true }
# File-system watcher for the automatic update-from-file mode.
notify = { version = "7", default-features = false, features = ["macos_fsevent"], optional = true }
# MD5 verification of downloaded data files (the service expects a Content-MD5
# header) and gzip decompression of the downloaded payload.
md-5 = { version = "0.10", optional = true }
flate2 = { workspace = true, optional = true }

[features]
# The data-update service keeps on-premise data files current. It polls the
# remote distributor over HTTP with If-Modified-Since, watches the data file on
# disk, verifies the downloaded MD5 and gzip-decompresses it. That pulls in
# reqwest, notify, md-5 and flate2, none of which build for targets such as
# wasm32-wasip1. It is on by default so on-premise engines and the facades are
# unchanged. A cloud-only or wasm consumer turns it off with
# `default-features = false` and loses only DataUpdateService.
default = ["data-update"]
data-update = ["dep:reqwest", "dep:notify", "dep:md-5", "dep:flate2"]

[dev-dependencies]
# A local HTTP server is spun up in tests to exercise the remote-poll path
# without reaching the real 51Degrees distributor.
tiny_http = "0.12"

[package.metadata.docs.rs]
# Build the documentation on docs.rs with every feature enabled, so the
# cloud, on-premise and optional paths are all documented.
all-features = true
