[package]
name = "fiftyone-pipeline-web"
version = "4.5.1"
description = "Framework-neutral web elements, client-side endpoint logic and the JavaScript/Mustache assets for the 51Degrees pipeline."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[features]
# Re-export the engines data-update service for native and on-premise consumers.
# Off by default so a default build carries no reqwest/notify and reaches
# wasm32-wasip1.
data-update = ["fiftyone-pipeline-engines/data-update"]

[dependencies]
fiftyone-pipeline-core = { version = "4.5.1", path = "../pipeline-core" }
# default-features = false drops the engines data-update service (reqwest/notify),
# which the web elements never use, so this crate compiles for wasm32-wasip1.
# Enable the `data-update` feature to re-export it.
fiftyone-pipeline-engines = { version = "4.5.1", path = "../pipeline-engines", default-features = false }
fiftyone-pipeline-engines-fiftyone = { version = "4.5.1", path = "../pipeline-engines-fiftyone" }
fiftyone-json-builder = { version = "4.5.1", path = "../json-builder" }
fiftyone-javascript-builder = { version = "4.5.1", path = "../javascript-builder" }
# ahash provides a fast hasher that can be seeded with fixed constants, giving a
# stable per-process digest for the web ETag. It is already a workspace
# dependency so it resolves to a single shared version.
ahash.workspace = true
