[package]
name = "device-detection-examples"
version = "0.1.0"
description = "Runnable device-detection examples (cloud, on-premise and web) for the 51Degrees Rust SDK."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
# Device-detection facade. Default features (cloud + on-premise) are kept so the
# example binaries can build either deployment from a single dependency, plus
# `reqwest-client` so the cloud examples use the built-in reqwest HTTP client.
fiftyone-device-detection = { path = "../../device-detection", features = ["reqwest-client"] }

# Core pipeline plumbing and the engine traits the examples introspect.
fiftyone-pipeline-core = { path = "../../pipeline-core" }
fiftyone-pipeline-engines = { path = "../../pipeline-engines" }
# Brings in ShareUsageElement, which the web examples must add (usage sharing is
# required for web examples, forbidden for console examples). share-usage-transport
# compiles the built-in HTTP sender (off by default so the crate stays
# wasm-buildable).
fiftyone-pipeline-engines-fiftyone = { path = "../../pipeline-engines-fiftyone", features = ["share-usage-transport"] }

# Shared example helpers: resource-key-from-env, data-file path resolvers, the
# data-file-age warning, property-as-string and the sample evidence values.
examples-shared = { path = "../../examples-shared" }
# Shared web-example scaffolding: the vendored design-system assets and their
# serving handlers, HTML escaping and the common table helpers. The
# product-specific renderers stay in this crate's `web_support` module.
examples-web-shared = { path = "../../examples-web-shared" }

# Web plumbing for the web example: the framework-neutral pipeline plus the axum
# adapter that mounts the two client-side endpoints and the result extractor.
fiftyone-pipeline-web = { path = "../../pipeline-web" }
fiftyone-pipeline-web-axum = { path = "../../pipeline-web-axum" }
# axum 0.8 / tower 0.5 match the versions the web-axum crate already resolves, so
# no second major version is pulled into the graph.
axum.workspace = true
tower.workspace = true
# The web example needs a real async runtime, the #[tokio::main]/#[tokio::test]
# macros, and spawn_blocking, so the multi-thread runtime and macros are enabled.
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

# Ergonomic error handling for the example `run` functions and `main`.
anyhow = "1"
# YAML reader for the offline and performance examples, which stream evidence
# records from "20000 Evidence Records.yml" in the device-detection-data
# submodule. serde_norway is the maintained fork of the (now unmaintained)
# serde_yaml and parses the same syntax.
serde_norway.workspace = true
# The Deserialize trait the offline example reads each YAML evidence document
# through as it iterates the serde_norway multi-document deserializer.
serde.workspace = true
# CSV reader for the "20000 User Agents.csv" evidence file the offline and
# performance examples can stream as an alternative to the YAML records.
csv.workspace = true
