[package]
publish = false  # internal example/bench crate, not for crates.io
name = "ip-intelligence-examples"
version = "4.5.2"
description = "Runnable IP-intelligence examples (cloud, on-premise and web) for the 51Degrees Rust SDK."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true

[dependencies]
# IP-intelligence facade. Default features (cloud + on-premise) are kept so the
# example binaries can build either deployment from a single dependency, plus
# `reqwest-client` so the cloud examples use the built-in reqwest HTTP client.
fiftyone-ip-intelligence = { version = "4.5.2", path = "../../ip-intelligence", features = ["reqwest-client"] }

# Cloud engines and the cloud request engine, used by the mixed cloud example to
# compose Device Detection and IP Intelligence into one pipeline over a single
# shared CloudRequestEngine. `reqwest-client` brings in the built-in blocking
# HTTP client so the cloud path has a transport without a separately supplied one.
fiftyone-cloud-request-engine = { version = "4.5.2", path = "../../cloud-request-engine", features = ["reqwest-client"] }
fiftyone-device-detection-cloud = { version = "4.5.2", path = "../../device-detection-cloud" }
fiftyone-ip-intelligence-cloud = { version = "4.5.2", path = "../../ip-intelligence-cloud" }

# Core pipeline plumbing and the engine traits the examples introspect.
fiftyone-pipeline-core = { version = "4.5.2", path = "../../pipeline-core" }
fiftyone-pipeline-engines = { version = "4.5.2", path = "../../pipeline-engines" }
# Brings in ShareUsageElement, which the web examples must add (usage sharing is
# required for web examples, forbidden for console examples). share-usage-transport
# compiles the built-in HTTP sender (off by default so the crate stays
# wasm-buildable).
fiftyone-pipeline-engines-fiftyone = { version = "4.5.2", path = "../../pipeline-engines-fiftyone", features = ["share-usage-transport"] }

# Shared example helpers: resource-key-from-env, data-file path resolvers, the
# data-file-age warning, property-as-string and the sample evidence values.
examples-shared = { version = "4.5.2", path = "../../examples-shared" }
# Shared web-example scaffolding: the vendored design-system assets and their
# serving handlers, HTML escaping and the common table helpers. The
# product-specific renderers stay in this crate's `web_support` module.
examples-web-shared = { version = "4.5.2", path = "../../examples-web-shared" }

# Web plumbing for the web example: the framework-neutral pipeline plus the axum
# adapter that mounts the two client-side endpoints and the result extractor.
fiftyone-pipeline-web = { version = "4.5.2", path = "../../pipeline-web" }
fiftyone-pipeline-web-axum = { version = "4.5.2", path = "../../pipeline-web-axum" }
# axum 0.8 / tower 0.5 match the versions the web-axum crate already resolves, so
# no second major version is pulled into the graph.
axum.workspace = true
tower.workspace = true
# The web example needs a real async runtime, the #[tokio::main]/#[tokio::test]
# macros, and spawn_blocking, so the multi-thread runtime and macros are enabled.
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

# Ergonomic error handling for the example `run` functions and `main`.
anyhow = "1"
# YAML reader for the offline and performance examples, which stream evidence
# records from evidence.yml in the ip-intelligence-data submodule. serde_norway
# is the maintained fork of the (now unmaintained) serde_yaml.
serde_norway.workspace = true
